--- a/style.css
+++ b/style.css
@@ -59,3 +59,13 @@ footer {
   margin: 15px auto;
   border: 2px solid #0077cc;
 }
+
+@media (max-width: 600px) {
+  .profile-photo {
+    width: 80px;
+    height: 80px;
+  }
+}
+  border: 2px solid #0077cc;
+}
+
